Ajustes con fanita 06/06/2025

--- a/index.html
+++ b/index.html
@@ -127,25 +127,31 @@
         <h2>Acompañamiento profesional</h2>
         <div class="container-servicios--cards">
           <div class="container-servicios--card">
-            <div class="container-servicios--card-text">
-              <h3>Consultas psicoterapeuticas</h3>
-              <p>Con más de 28 años de experiencia clínica trabajo en resolución de conflictos o terapia breve considerando el ser integral: espíritu, alma y cuerpo.</p>
+            <div class="card-contenido">
+              <div class="container-servicios--card-text">
+                <h3>Consultas psicoterapeuticas</h3>
+                <p>Con más de 28 años de experiencia clínica trabajo en resolución de conflictos o terapia breve considerando el ser integral: espíritu, alma y cuerpo.</p>
+              </div>
               <a href="#" class="btn btn-servicios">Solicitar</a>
             </div>
             <img class="container-servicios--card-img" src="./img/ConsultasPsicoterapeuticas.webp" alt="Consultas Psicoterapeuticas">
           </div>
           <div class="container-servicios--card">
-            <div class="container-servicios--card-text">
-              <h3>Entrenamiento de profesionales de la Salud mental</h3>
-              <p>Trabajamos para salir del secuestro del humanismo entendiendo la sabiduría eterna de Dios para solucionar de fondo los problemas humanos. Material grabado y encuentros en vivo vía zoom.</p>
+            <div class="card-contenido">
+              <div class="container-servicios--card-text">
+                <h3>Entrenamiento de profesionales de la Salud mental</h3>
+                <p>Trabajamos para salir del secuestro del humanismo entendiendo la sabiduría eterna de Dios para solucionar de fondo los problemas humanos. Material grabado y encuentros en vivo vía zoom.</p>
+              </div>
               <a href="#" class="btn btn-servicios">Solicitar</a>
             </div>
             <img class="container-servicios--card-img" src="./img/EntrenamientoDeprofesionalesDeLaSaludMental.webp" alt="Entrenamiento de profesionales de la Salud mental">
           </div>
           <div class="container-servicios--card">
-            <div class="container-servicios--card-text">
-              <h3>Supervisión de casos clínicos</h3>
-              <p>En encuentros en vivo vía zoom poniendo a disposición mi experiencia para colaborar orientando en los casos de profesionales que lo soliciten.</p>
+            <div class="card-contenido">
+              <div class="container-servicios--card-text">
+                <h3>Supervisión de casos clínicos</h3>
+                <p>En encuentros en vivo vía zoom poniendo a disposición mi experiencia para colaborar orientando en los casos de profesionales que lo soliciten.</p>
+              </div>
               <a href="#" class="btn btn-servicios">Solicitar</a>
             </div>
             <img class="container-servicios--card-img" src="./img/SupervisiónDeCasosClínicos.webp" alt="Supervisión de casos clínicos">
@@ -164,34 +170,50 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="card-curso">
-                <img src="./img/psicologia.webp" alt="La Psicología de Dios">
-                <h3>La Psicología de Dios</h3>
-                <p>En este curso se aborda cómo la mente, la voluntad y las emociones (alma) son parte del diseño de Dios del ser integral y cuál es el objetivo de Dios para el alma humana.</p>
+                <div class="card-curso--elementos">
+                  <img src="./img/psicologia.webp" alt="La Psicología de Dios">
+                  <div class="card-curso--texts">
+                    <h3>La Psicología de Dios</h3>
+                    <p>En este curso se aborda cómo la mente, la voluntad y las emociones (alma) son parte del diseño de Dios del ser integral y cuál es el objetivo de Dios para el alma humana.</p>
+                  </div>
+                </div>
                 <a href="#" class="btn btn-curso">Inscríbete aquí</a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="card-curso">
-                <img src="./img/familia.webp" alt="Familias Alineadas a lo Eterno">
-                <h3>Familias Alineadas a lo Eterno</h3>
-                <p>Descubre el diseño y las intenciones originales de Dios y aprende a incorporarlas a tu familia.</p>
+                <div class="card-curso--elementos">
+                  <img src="./img/familia.webp" alt="Familias Alineadas a lo Eterno">
+                  <div class="card-curso--texts">
+                    <h3>Familias Alineadas a lo Eterno</h3>
+                    <p>Descubre el diseño y las intenciones originales de Dios y aprende a incorporarlas a tu familia.</p>
+                  </div>
+                </div>
                 <a href="#" class="btn btn-curso">Inscríbete aquí</a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="card-curso">
-                <img src="./img/adversidad.webp" alt="Cómo enfrentar la adversidad">
-                <h3>Cómo enfrentar la adversidad</h3>
-                <p>Este curso aborda un tema clave: el dolor, la tragedia, el sufrimiento, la muerte y el duelo, brindando herramientas para afrontarlos.</p>
+                <div class="card-curso--elementos">
+                  <img src="./img/adversidad.webp" alt="Cómo enfrentar la adversidad">
+                  <div class="card-curso--texts">
+                    <h3>Cómo enfrentar la adversidad</h3>
+                    <p>Este curso aborda un tema clave: el dolor, la tragedia, el sufrimiento, la muerte y el duelo, brindando herramientas para afrontarlos.</p>
+                  </div>
+                </div>
                 <a href="#" class="btn btn-curso">Inscríbete aquí</a>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="card-curso">
-                <img src="./img/salvarFamilia.webp" alt="Cómo salvamos a la familia">
-                <h3>Cómo salvamos a la familia</h3>
-                <p>Es uno de los grandes interrogantes de las últimas generaciones atacadas por ideologías anti-diseño.</p>
-                <a href="#" class="btn btn-card">Inscríbete aquí</a>
+                <div class="card-curso--elementos">
+                  <img src="./img/salvarFamilia.webp" alt="Cómo salvamos a la familia">
+                  <div class="card-curso--texts">
+                    <h3>Cómo salvamos a la familia</h3>
+                    <p>Es uno de los grandes interrogantes de las últimas generaciones atacadas por ideologías anti-diseño.</p>
+                  </div>
+                </div>
+                <a href="#" class="btn btn-curso">Inscríbete aquí</a>
               </div>
             </div>
           </div>
@@ -230,9 +252,16 @@
             <div>
               <img src="./img/book-psicologia.webp" alt="La Psicología de Dios" class="img-fluid">
             </div>  
+              <h3>AQUI VA OTRO LIBRO</h3>
+              <a href="#" class="btn btn-card">Comprar</a>
+          </div>
+          <div class="container__libros--card">
+            <div>
+              <img src="./img/book-psicologia.webp" alt="La Psicología de Dios" class="img-fluid">
+            </div>  
               <h3>La Psicología de Dios</h3>
               <a href="#" class="btn btn-card">Comprar</a>
-            </div>
+          </div>
             <div class="container__libros--card">
              <div>
                <img src="./img/book-familia.webp" alt="Familias Alineadas a lo Eterno" class="img-fluid">
@@ -267,6 +296,11 @@
             <div class="swiper-slide container__libros--card">
               <img src="./img/book-noviazgo.webp" alt="Noviazgo de la mano de Dios" class="img-fluid">
               <h3>Noviazgo de la mano de Dios</h3>
+              <a href="#" class="btn btn-card">Descargar</a>
+            </div>
+            <div class="swiper-slide container__libros--card">
+              <img src="./img/book-noviazgo.webp" alt="Noviazgo de la mano de Dios" class="img-fluid">
+              <h3>AQUI TAMBIEN VA OTRO</h3>
               <a href="#" class="btn btn-card">Descargar</a>
             </div>
           </div>
@@ -394,33 +428,33 @@
         <div class="container__footer--logo">
           <img src="./img/DavidFirmaLogo.svg" alt="Logo">
         </div>
-      
         <div class="container__footer--social">
             <a href="#" class="container__footer--redSocial" target="_blank">
-            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
-              <path d="M18 12.7575C15.0975 12.7575 12.7575 15.12 12.7575 18C12.7575 20.88 15.12 23.2425 18 23.2425C20.88 23.2425 23.2425 20.88 23.2425 18C23.2425 15.12 20.88 12.7575 18 12.7575ZM33.75 18C33.75 15.8175 33.75 13.68 33.6375 11.4975C33.525 8.9775 32.94 6.7275 31.095 4.905C29.25 3.06 27.0225 2.475 24.5025 2.3625C22.32 2.25 20.1825 2.25 18 2.25C15.8175 2.25 13.68 2.25 11.4975 2.3625C8.9775 2.475 6.7275 3.06 4.905 4.905C3.06 6.75 2.475 8.9775 2.3625 11.4975C2.25 13.68 2.25 15.8175 2.25 18C2.25 20.1825 2.25 22.32 2.3625 24.5025C2.475 27.0225 3.06 29.2725 4.905 31.095C6.75 32.94 8.9775 33.525 11.4975 33.6375C13.68 33.75 15.8175 33.75 18 33.75C20.1825 33.75 22.32 33.75 24.5025 33.6375C27.0225 33.525 29.2725 32.94 31.095 31.095C32.94 29.25 33.525 27.0225 33.6375 24.5025C33.7725 22.3425 33.75 20.1825 33.75 18ZM18 26.0775C13.5225 26.0775 9.9225 22.4775 9.9225 18C9.9225 13.5225 13.5225 9.9225 18 9.9225C22.4775 9.9225 26.0775 13.5225 26.0775 18C26.0775 22.4775 22.4775 26.0775 18 26.0775ZM26.415 11.475C25.38 11.475 24.525 10.6425 24.525 9.585C24.525 8.5275 25.3575 7.695 26.415 7.695C27.4725 7.695 28.305 8.5275 28.305 9.585C28.3107 9.83146 28.2657 10.0765 28.1728 10.3048C28.0799 10.5332 27.9411 10.74 27.765 10.9125C27.5925 11.0886 27.3857 11.2274 27.1573 11.3203C26.929 11.4132 26.684 11.4582 26.4375 11.4525L26.415 11.475Z" fill="#9D0000" style="fill:#9D0000;fill:color(display-p3 0.6157 0.0000 0.0000);fill-opacity:1;"/>
+            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="37" viewBox="0 0 36 37" fill="none">
+              <path d="M18 13.2575C15.0975 13.2575 12.7575 15.62 12.7575 18.5C12.7575 21.38 15.12 23.7425 18 23.7425C20.88 23.7425 23.2425 21.38 23.2425 18.5C23.2425 15.62 20.88 13.2575 18 13.2575ZM33.75 18.5C33.75 16.3175 33.75 14.18 33.6375 11.9975C33.525 9.4775 32.94 7.2275 31.095 5.405C29.25 3.56 27.0225 2.975 24.5025 2.8625C22.32 2.75 20.1825 2.75 18 2.75C15.8175 2.75 13.68 2.75 11.4975 2.8625C8.9775 2.975 6.7275 3.56 4.905 5.405C3.06 7.25 2.475 9.4775 2.3625 11.9975C2.25 14.18 2.25 16.3175 2.25 18.5C2.25 20.6825 2.25 22.82 2.3625 25.0025C2.475 27.5225 3.06 29.7725 4.905 31.595C6.75 33.44 8.9775 34.025 11.4975 34.1375C13.68 34.25 15.8175 34.25 18 34.25C20.1825 34.25 22.32 34.25 24.5025 34.1375C27.0225 34.025 29.2725 33.44 31.095 31.595C32.94 29.75 33.525 27.5225 33.6375 25.0025C33.7725 22.8425 33.75 20.6825 33.75 18.5ZM18 26.5775C13.5225 26.5775 9.9225 22.9775 9.9225 18.5C9.9225 14.0225 13.5225 10.4225 18 10.4225C22.4775 10.4225 26.0775 14.0225 26.0775 18.5C26.0775 22.9775 22.4775 26.5775 18 26.5775ZM26.415 11.975C25.38 11.975 24.525 11.1425 24.525 10.085C24.525 9.0275 25.3575 8.195 26.415 8.195C27.4725 8.195 28.305 9.0275 28.305 10.085C28.3107 10.3315 28.2657 10.5765 28.1728 10.8048C28.0799 11.0332 27.9411 11.24 27.765 11.4125C27.5925 11.5886 27.3857 11.7274 27.1573 11.8203C26.929 11.9132 26.684 11.9582 26.4375 11.9525L26.415 11.975Z" fill="#FEFAF7" style="fill:#FEFAF7;fill:color(display-p3 0.9961 0.9804 0.9686);fill-opacity:1;"/>
             </svg>
             <h4>davidfirmanoficial</h4>
             </a>
             <a href="#" class="container__footer--redSocial" target="_blank">
-              <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
-                <path d="M33 18C33 9.72 26.28 3 18 3C9.72 3 3 9.72 3 18C3 25.26 8.16 31.305 15 32.7V22.5H12V18H15V14.25C15 11.355 17.355 9 20.25 9H24V13.5H21C20.175 13.5 19.5 14.175 19.5 15V18H24V22.5H19.5V32.925C27.075 32.175 33 25.785 33 18Z" fill="#9D0000" style="fill:#9D0000;fill:color(display-p3 0.6157 0.0000 0.0000);fill-opacity:1;"/>
+              <svg xmlns="http://www.w3.org/2000/svg" width="36" height="37" viewBox="0 0 36 37" fill="none">
+                <path d="M33 18.5C33 10.22 26.28 3.5 18 3.5C9.72 3.5 3 10.22 3 18.5C3 25.76 8.16 31.805 15 33.2V23H12V18.5H15V14.75C15 11.855 17.355 9.5 20.25 9.5H24V14H21C20.175 14 19.5 14.675 19.5 15.5V18.5H24V23H19.5V33.425C27.075 32.675 33 26.285 33 18.5Z" fill="#FEFAF7" style="fill:#FEFAF7;fill:color(display-p3 0.9961 0.9804 0.9686);fill-opacity:1;"/>
               </svg>
               <h4>davidfirmanoficial</h4>
             </a>
             <a href="#" class="container__footer--redSocial" target="_blank">
-              <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
-                <path d="M15 22.5L22.785 18L15 13.5V22.5ZM32.34 10.755C32.535 11.46 32.67 12.405 32.76 13.605C32.865 14.805 32.91 15.84 32.91 16.74L33 18C33 21.285 32.76 23.7 32.34 25.245C31.965 26.595 31.095 27.465 29.745 27.84C29.04 28.035 27.75 28.17 25.77 28.26C23.82 28.365 22.035 28.41 20.385 28.41L18 28.5C11.715 28.5 7.8 28.26 6.255 27.84C4.905 27.465 4.035 26.595 3.66 25.245C3.465 24.54 3.33 23.595 3.24 22.395C3.135 21.195 3.09 20.16 3.09 19.26L3 18C3 14.715 3.24 12.3 3.66 10.755C4.035 9.405 4.905 8.535 6.255 8.16C6.96 7.965 8.25 7.83 10.23 7.74C12.18 7.635 13.965 7.59 15.615 7.59L18 7.5C24.285 7.5 28.2 7.74 29.745 8.16C31.095 8.535 31.965 9.405 32.34 10.755Z" fill="#9D0000" style="fill:#9D0000;fill:color(display-p3 0.6157 0.0000 0.0000);fill-opacity:1;"/>
+              <svg xmlns="http://www.w3.org/2000/svg" width="36" height="37" viewBox="0 0 36 37" fill="none">
+                <path d="M15 23L22.785 18.5L15 14V23ZM32.34 11.255C32.535 11.96 32.67 12.905 32.76 14.105C32.865 15.305 32.91 16.34 32.91 17.24L33 18.5C33 21.785 32.76 24.2 32.34 25.745C31.965 27.095 31.095 27.965 29.745 28.34C29.04 28.535 27.75 28.67 25.77 28.76C23.82 28.865 22.035 28.91 20.385 28.91L18 29C11.715 29 7.8 28.76 6.255 28.34C4.905 27.965 4.035 27.095 3.66 25.745C3.465 25.04 3.33 24.095 3.24 22.895C3.135 21.695 3.09 20.66 3.09 19.76L3 18.5C3 15.215 3.24 12.8 3.66 11.255C4.035 9.905 4.905 9.035 6.255 8.66C6.96 8.465 8.25 8.33 10.23 8.24C12.18 8.135 13.965 8.09 15.615 8.09L18 8C24.285 8 28.2 8.24 29.745 8.66C31.095 9.035 31.965 9.905 32.34 11.255Z" fill="#FEFAF7" style="fill:#FEFAF7;fill:color(display-p3 0.9961 0.9804 0.9686);fill-opacity:1;"/>
               </svg>
               <h4>davidfirmanoficial</h4>
             </a>
             <div class="container__footer--redSocial" target="_blank">
-              <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
-                <path fill-rule="evenodd" clip-rule="evenodd" d="M6 6.375C4.90598 6.375 3.85677 6.8096 3.08318 7.58318C2.3096 8.35677 1.875 9.40598 1.875 10.5V25.5C1.875 26.594 2.3096 27.6432 3.08318 28.4168C3.85677 29.1904 4.90598 29.625 6 29.625H30C31.094 29.625 32.1432 29.1904 32.9168 28.4168C33.6904 27.6432 34.125 26.594 34.125 25.5V10.5C34.125 9.40598 33.6904 8.35677 32.9168 7.58318C32.1432 6.8096 31.094 6.375 30 6.375H6ZM11.145 12.579C10.9005 12.4194 10.6035 12.3612 10.3168 12.4166C10.0301 12.472 9.7762 12.6366 9.6087 12.8758C9.44121 13.115 9.37326 13.4099 9.41922 13.6982C9.46518 13.9866 9.62145 14.2458 9.855 14.421L17.355 19.671C17.5441 19.8033 17.7692 19.8743 18 19.8743C18.2308 19.8743 18.4559 19.8033 18.645 19.671L26.145 14.421C26.2713 14.3386 26.3798 14.2316 26.4639 14.1064C26.5481 13.9812 26.6062 13.8403 26.6348 13.6922C26.6634 13.5441 26.6619 13.3918 26.6305 13.2443C26.599 13.0968 26.5382 12.9571 26.4517 12.8335C26.3652 12.71 26.2547 12.6051 26.1268 12.5251C25.9989 12.4451 25.8562 12.3916 25.7073 12.3679C25.5583 12.3441 25.4061 12.3506 25.2597 12.3869C25.1133 12.4231 24.9757 12.4885 24.855 12.579L18 17.3775L11.145 12.579Z" fill="#9D0000" style="fill:#9D0000;fill:color(display-p3 0.6157 0.0000 0.0000);fill-opacity:1;"/>
+              <svg xmlns="http://www.w3.org/2000/svg" width="36" height="37" viewBox="0 0 36 37" fill="none">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M6 6.875C4.90598 6.875 3.85677 7.3096 3.08318 8.08318C2.3096 8.85677 1.875 9.90598 1.875 11V26C1.875 27.094 2.3096 28.1432 3.08318 28.9168C3.85677 29.6904 4.90598 30.125 6 30.125H30C31.094 30.125 32.1432 29.6904 32.9168 28.9168C33.6904 28.1432 34.125 27.094 34.125 26V11C34.125 9.90598 33.6904 8.85677 32.9168 8.08318C32.1432 7.3096 31.094 6.875 30 6.875H6ZM11.145 13.079C10.9005 12.9194 10.6035 12.8612 10.3168 12.9166C10.0301 12.972 9.7762 13.1366 9.6087 13.3758C9.44121 13.615 9.37326 13.9099 9.41922 14.1982C9.46518 14.4866 9.62145 14.7458 9.855 14.921L17.355 20.171C17.5441 20.3033 17.7692 20.3743 18 20.3743C18.2308 20.3743 18.4559 20.3033 18.645 20.171L26.145 14.921C26.2713 14.8386 26.3798 14.7316 26.4639 14.6064C26.5481 14.4812 26.6062 14.3403 26.6348 14.1922C26.6634 14.0441 26.6619 13.8918 26.6305 13.7443C26.599 13.5968 26.5382 13.4571 26.4517 13.3335C26.3652 13.21 26.2547 13.1051 26.1268 13.0251C25.9989 12.9451 25.8562 12.8916 25.7073 12.8679C25.5583 12.8441 25.4061 12.8506 25.2597 12.8869C25.1133 12.9231 24.9757 12.9885 24.855 13.079L18 17.8775L11.145 13.079Z" fill="#FEFAF7" style="fill:#FEFAF7;fill:color(display-p3 0.9961 0.9804 0.9686);fill-opacity:1;"/>
               </svg>
               <h4>davidfirmanpsicologo@gmail.com</h4>
             </div>
         </div>
+        <p>© 2025 David Firman. Todos los derechos reservados.</p>
       </div>
     </footer>
     <!-- FOOTER FIN-->
