Ajustes de figma 12-06-2025

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <div class="container__videos--text">
           <h2>Videos Recomendados</h2>
           <p>Aquí tienes videos recomendados que encontrarás en mi canal en YouTube</p>
-          <a href="https://www.youtube.com/@DavidFirmanOficial" class="btn btn-card" target="_blank">Ir al canal</a>
+          <a href="https://www.youtube.com/@DavidFirmanOficial" class="btn btn-videos" target="_blank">Ir al canal</a>
         </div>
         <div class="container__videos--principal">
             <iframe src="https://www.youtube.com/embed/XNbfDSbAdK8" title="Master Class Psicología De Dios de David Firman" frameborder="0" allowfullscreen></iframe>
@@ -412,7 +412,7 @@
               <textarea class="form-control" id="mensaje" name="mensaje" rows="3" required></textarea>
             </div>
             <div class="form-footer">
-              <button type="submit" class="btn btn-card">Enviar</button>
+              <button type="submit" class="btn btn-submit">Enviar</button>
             </div>
           </form>
 
@@ -488,8 +488,7 @@
               </div>
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-              <button type="submit" class="btn btn-card">Enviar</button>
+              <button type="submit" class="btn btn-submit">Enviar</button>
             </div>
           </form>
         </div>
