--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
         <!-- Libros compra -->
         <div id="books-list" class="container__libros--compra--cards"></div>
         <!-- Libros gratuitos (carrusel) -->
+         <h3 data-i18n="books.msgBooks"></h3>
         <div class="swiper librosDescargaSwiper">
           <div class="swiper-wrapper" id="books-free-list"></div>
           <div class="swiper-pagination librosDescarga-pagination"></div>
@@ -198,6 +199,15 @@
     <section id="videos">
       <div class="container__videos">
         <div class="container__videos--text">
+          <svg xmlns="http://www.w3.org/2000/svg" width="95" height="64" viewBox="0 0 95 64" fill="none">
+            <path d="M14.8462 0C10.9088 0 7.13257 1.58035 4.34836 4.3934C1.56415 7.20644 0 11.0218 0 15V49C0 52.9782 1.56415 56.7936 4.34836 59.6066C7.13257 62.4197 10.9088 64 14.8462 64H52.4567C56.3941 64 60.1703 62.4197 62.9545 59.6066C65.7387 56.7936 67.3029 52.9782 67.3029 49V46.988L84.1365 58.732C88.729 61.936 95 58.612 95 52.972V11.012C95 5.372 88.729 2.044 84.1365 5.252L67.3029 16.996V15C67.3029 11.0218 65.7387 7.20644 62.9545 4.3934C60.1703 1.58035 56.3941 0 52.4567 0H14.8462ZM67.3029 24.284L87.5096 10.188C87.6582 10.0844 87.832 10.0238 88.0123 10.0128C88.1926 10.0019 88.3723 10.0409 88.5322 10.1258C88.692 10.2107 88.8259 10.3381 88.9192 10.4943C89.0125 10.6505 89.0617 10.8296 89.0615 11.012V52.972C89.0617 53.1544 89.0125 53.3335 88.9192 53.4897C88.8259 53.6459 88.692 53.7733 88.5322 53.8582C88.3723 53.9431 88.1926 53.9821 88.0123 53.9712C87.832 53.9602 87.6582 53.8996 87.5096 53.796L67.3029 39.692V24.284ZM5.93849 15C5.93849 12.6131 6.87698 10.3239 8.54751 8.63604C10.218 6.94821 12.4837 6 14.8462 6H52.4567C54.8191 6 57.0849 6.94821 58.7554 8.63604C60.4259 10.3239 61.3644 12.6131 61.3644 15V49C61.3644 51.3869 60.4259 53.6761 58.7554 55.364C57.0849 57.0518 54.8191 58 52.4567 58H14.8462C12.4837 58 10.218 57.0518 8.54751 55.364C6.87698 53.6761 5.93849 51.3869 5.93849 49V15Z" fill="url(#paint0_linear_426_180)" style=""/>
+            <defs>
+              <linearGradient id="paint0_linear_426_180" x1="6.1998" y1="2.94799" x2="29.65" y2="61.8835" gradientUnits="userSpaceOnUse">
+                <stop stop-color="#740E14" style="stop-color:#740E14;stop-color:color(display-p3 0.4566 0.0564 0.0782);stop-opacity:1;"/>
+                <stop offset="1" stop-color="#1C0000" style="stop-color:#1C0000;stop-color:color(display-p3 0.1098 0.0000 0.0000);stop-opacity:1;"/>
+              </linearGradient>
+            </defs>
+          </svg>
           <h2 data-i18n="videos.title"></h2>
           <p data-i18n="videos.intro"></p>
           <a href="https://www.youtube.com/@DavidFirmanOficial" class="btn btn-videos" target="_blank" data-i18n="videos.button"></a>
@@ -217,21 +227,21 @@
           <h2 data-i18n="contact.title"></h2>
           <p data-i18n="contact.text"></p>
           <div class="container__contacto--redesSociales">
-            <a href="#" class="container__contacto--redSocial" target="_blank">
+            <a href="https://www.instagram.com/davidfirmanoficial/" class="container__contacto--redSocial" target="_blank">
               <!-- SVG Instagram -->
               <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
                 <path d="M18 12.7575C15.0975 12.7575 12.7575 15.12 12.7575 18C12.7575 20.88 15.12 23.2425 18 23.2425C20.88 23.2425 23.2425 20.88 23.2425 18C23.2425 15.12 20.88 12.7575 18 12.7575ZM33.75 18C33.75 15.8175 33.75 13.68 33.6375 11.4975C33.525 8.9775 32.94 6.7275 31.095 4.905C29.25 3.06 27.0225 2.475 24.5025 2.3625C22.32 2.25 20.1825 2.25 18 2.25C15.8175 2.25 13.68 2.25 11.4975 2.3625C8.9775 2.475 6.7275 3.06 4.905 4.905C3.06 6.75 2.475 8.9775 2.3625 11.4975C2.25 13.68 2.25 15.8175 2.25 18C2.25 20.1825 2.25 22.32 2.3625 24.5025C2.475 27.0225 3.06 29.2725 4.905 31.095C6.75 32.94 8.9775 33.525 11.4975 33.6375C13.68 33.75 15.8175 33.75 18 33.75C20.1825 33.75 22.32 33.75 24.5025 33.6375C27.0225 33.525 29.2725 32.94 31.095 31.095C32.94 29.25 33.525 27.0225 33.6375 24.5025C33.7725 22.3425 33.75 20.1825 33.75 18ZM18 26.0775C13.5225 26.0775 9.9225 22.4775 9.9225 18C9.9225 13.5225 13.5225 9.9225 18 9.9225C22.4775 9.9225 26.0775 13.5225 26.0775 18C26.0775 22.4775 22.4775 26.0775 18 26.0775ZM26.415 11.475C25.38 11.475 24.525 10.6425 24.525 9.585C24.525 8.5275 25.3575 7.695 26.415 7.695C27.4725 7.695 28.305 8.5275 28.305 9.585C28.3107 9.83146 28.2657 10.0765 28.1728 10.3048C28.0799 10.5332 27.9411 10.74 27.765 10.9125C27.5925 11.0886 27.3857 11.2274 27.1573 11.3203C26.929 11.4132 26.684 11.4582 26.4375 11.4525L26.415 11.475Z" fill="#9D0000"/>
               </svg>
               <h4>davidfirmanoficial</h4>
             </a>
-            <a href="#" class="container__contacto--redSocial" target="_blank">
+            <a href="https://www.facebook.com/davidfirmanoficial" class="container__contacto--redSocial" target="_blank">
               <!-- SVG Facebook -->
               <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
                 <path d="M33 18C33 9.72 26.28 3 18 3C9.72 3 3 9.72 3 18C3 25.26 8.16 31.305 15 32.7V22.5H12V18H15V14.25C15 11.355 17.355 9 20.25 9H24V13.5H21C20.175 13.5 19.5 14.175 19.5 15V18H24V22.5H19.5V32.925C27.075 32.175 33 25.785 33 18Z" fill="#9D0000"/>
               </svg>
               <h4>davidfirmanoficial</h4>
             </a>
-            <a href="#" class="container__contacto--redSocial" target="_blank">
+            <a href="https://www.youtube.com/@DavidFirmanOficial" class="container__contacto--redSocial" target="_blank">
               <!-- SVG YouTube -->
               <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
                 <path d="M15 22.5L22.785 18L15 13.5V22.5ZM32.34 10.755C32.535 11.46 32.67 12.405 32.76 13.605C32.865 14.805 32.91 15.84 32.91 16.74L33 18C33 21.285 32.76 23.7 32.34 25.245C31.965 26.595 31.095 27.465 29.745 27.84C29.04 28.035 27.75 28.17 25.77 28.26C23.82 28.365 22.035 28.41 20.385 28.41L18 28.5C11.715 28.5 7.8 28.26 6.255 27.84C4.905 27.465 4.035 26.595 3.66 25.245C3.465 24.54 3.33 23.595 3.24 22.395C3.135 21.195 3.09 20.16 3.09 19.26L3 18C3 14.715 3.24 12.3 3.66 10.755C4.035 9.405 4.905 8.535 6.255 8.16C6.96 7.965 8.25 7.83 10.23 7.74C12.18 7.635 13.965 7.59 15.615 7.59L18 7.5C24.285 7.5 28.2 7.74 29.745 8.16C31.095 8.535 31.965 9.405 32.34 10.755Z" fill="#9D0000"/>
@@ -295,19 +305,19 @@
           <img src="./img/DavidFirmaLogo.svg" alt="Logo">
         </div>
         <div class="container__footer--social">
-            <a href="#" class="container__footer--redSocial" target="_blank">
+            <a href="https://www.instagram.com/davidfirmanoficial/" class="container__footer--redSocial" target="_blank">
             <svg xmlns="http://www.w3.org/2000/svg" width="36" height="37" viewBox="0 0 36 37" fill="none">
               <path d="M18 13.2575C15.0975 13.2575 12.7575 15.62 12.7575 18.5C12.7575 21.38 15.12 23.7425 18 23.7425C20.88 23.7425 23.2425 21.38 23.2425 18.5C23.2425 15.62 20.88 13.2575 18 13.2575ZM33.75 18.5C33.75 16.3175 33.75 14.18 33.6375 11.9975C33.525 9.4775 32.94 7.2275 31.095 5.405C29.25 3.56 27.0225 2.975 24.5025 2.8625C22.32 2.75 20.1825 2.75 18 2.75C15.8175 2.75 13.68 2.75 11.4975 2.8625C8.9775 2.975 6.7275 3.56 4.905 5.405C3.06 7.25 2.475 9.4775 2.3625 11.9975C2.25 14.18 2.25 16.3175 2.25 18.5C2.25 20.6825 2.25 22.82 2.3625 25.0025C2.475 27.5225 3.06 29.7725 4.905 31.595C6.75 33.44 8.9775 34.025 11.4975 34.1375C13.68 34.25 15.8175 34.25 18 34.25C20.1825 34.25 22.32 34.25 24.5025 34.1375C27.0225 34.025 29.2725 33.44 31.095 31.595C32.94 29.75 33.525 27.5225 33.6375 25.0025C33.7725 22.8425 33.75 20.6825 33.75 18.5ZM18 26.5775C13.5225 26.5775 9.9225 22.9775 9.9225 18.5C9.9225 14.0225 13.5225 10.4225 18 10.4225C22.4775 10.4225 26.0775 14.0225 26.0775 18.5C26.0775 22.9775 22.4775 26.5775 18 26.5775ZM26.415 11.975C25.38 11.975 24.525 11.1425 24.525 10.085C24.525 9.0275 25.3575 8.195 26.415 8.195C27.4725 8.195 28.305 9.0275 28.305 10.085C28.3107 10.3315 28.2657 10.5765 28.1728 10.8048C28.0799 11.0332 27.9411 11.24 27.765 11.4125C27.5925 11.5886 27.3857 11.7274 27.1573 11.8203C26.929 11.9132 26.684 11.9582 26.4375 11.9525L26.415 11.975Z" fill="#FEFAF7" style="fill:#FEFAF7;fill:color(display-p3 0.9961 0.9804 0.9686);fill-opacity:1;"/>
             </svg>
             <h4>davidfirmanoficial</h4>
             </a>
-            <a href="#" class="container__footer--redSocial" target="_blank">
+            <a href="https://www.facebook.com/davidfirmanoficial" class="container__footer--redSocial" target="_blank">
               <svg xmlns="http://www.w3.org/2000/svg" width="36" height="37" viewBox="0 0 36 37" fill="none">
                 <path d="M33 18.5C33 10.22 26.28 3.5 18 3.5C9.72 3.5 3 10.22 3 18.5C3 25.76 8.16 31.805 15 33.2V23H12V18.5H15V14.75C15 11.855 17.355 9.5 20.25 9.5H24V14H21C20.175 14 19.5 14.675 19.5 15.5V18.5H24V23H19.5V33.425C27.075 32.675 33 26.285 33 18.5Z" fill="#FEFAF7" style="fill:#FEFAF7;fill:color(display-p3 0.9961 0.9804 0.9686);fill-opacity:1;"/>
               </svg>
               <h4>davidfirmanoficial</h4>
             </a>
-            <a href="#" class="container__footer--redSocial" target="_blank">
+            <a href="https://www.youtube.com/@DavidFirmanOficial" class="container__footer--redSocial" target="_blank">
               <svg xmlns="http://www.w3.org/2000/svg" width="36" height="37" viewBox="0 0 36 37" fill="none">
                 <path d="M15 23L22.785 18.5L15 14V23ZM32.34 11.255C32.535 11.96 32.67 12.905 32.76 14.105C32.865 15.305 32.91 16.34 32.91 17.24L33 18.5C33 21.785 32.76 24.2 32.34 25.745C31.965 27.095 31.095 27.965 29.745 28.34C29.04 28.535 27.75 28.67 25.77 28.76C23.82 28.865 22.035 28.91 20.385 28.91L18 29C11.715 29 7.8 28.76 6.255 28.34C4.905 27.965 4.035 27.095 3.66 25.745C3.465 25.04 3.33 24.095 3.24 22.895C3.135 21.695 3.09 20.66 3.09 19.76L3 18.5C3 15.215 3.24 12.8 3.66 11.255C4.035 9.905 4.905 9.035 6.255 8.66C6.96 8.465 8.25 8.33 10.23 8.24C12.18 8.135 13.965 8.09 15.615 8.09L18 8C24.285 8 28.2 8.24 29.745 8.66C31.095 9.035 31.965 9.905 32.34 11.255Z" fill="#FEFAF7" style="fill:#FEFAF7;fill:color(display-p3 0.9961 0.9804 0.9686);fill-opacity:1;"/>
               </svg>
@@ -326,7 +336,7 @@
     <!-- FOOTER FIN-->
 
   </main>
-  <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
+  <div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel">
     <div class="modal-dialog">
       <div class="modal-content">
         <form id="contactoModalForm">
