--- a/index.html
+++ b/index.html
@@ -275,6 +275,10 @@
               <input type="email" class="form-control" id="email" name="email" required placeholder="">
             </div>
             <div class="mb-3">
+              <label for="direccion" class="form-label" data-i18n="contact.form.direccion"></label>
+              <input type="text" class="form-control" id="direccion" name="direccion" required placeholder="">
+            </div>
+            <div class="mb-3">
               <label for="motivo" class="form-label" data-i18n="contact.form.subject"></label>
               <select class="form-select" id="motivo" name="motivo" required>
                 <option value="" disabled selected data-i18n="contact.form.subject"></option>
@@ -348,11 +352,15 @@
           <div class="modal-body">
             <div class="mb-3">
               <label for="nombreModal" class="form-label" data-i18n="contact.form.name"></label>
-              <input type="text" class="form-control" id="nombreModal" name="nombre" required placeholder="">
+              <input type="text" class="form-control" id="nombreModal" name="name" required placeholder="">
             </div>
             <div class="mb-3">
               <label for="emailModal" class="form-label" data-i18n="contact.form.email"></label>
               <input type="email" class="form-control" id="emailModal" name="email" required placeholder="">
+            </div>
+            <div class="mb-3">
+              <label for="direccion" class="form-label" data-i18n="contact.form.direccion"></label>
+              <input type="text" class="form-control" id="direccionModal" name="direccion" required placeholder="">
             </div>
             <div class="mb-3">
               <label for="motivoModal" class="form-label" data-i18n="contact.form.subject"></label>
@@ -374,7 +382,7 @@
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
   <script type="text/javascript">
-    emailjs.init('cq8RBcup3_7AZUwJo')
+    emailjs.init('X1Q-xATBxImhx806T')
   </script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
   <script type="text/javascript" src="./js/script.js"></script>
