--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container-fluid container__menu--icon">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <svg xmlns="http://www.w3.org/2000/svg" width="63" height="63" viewBox="0 0 63 63" fill="none" preserveAspectRatio="xMidYMid meet">
+            <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 63 63" fill="none">
               <rect x="0.450195" y="0.0583344" width="62.55" height="62.55" rx="17.375" fill="#9D0000" style="fill:#9D0000;fill:color(display-p3 0.6157 0.0000 0.0000);fill-opacity:1;"/>
               <path d="M16.2811 42.3372C15.7342 42.3372 15.276 42.1565 14.9066 41.7951C14.5372 41.4337 14.3519 40.987 14.3506 40.4549C14.3493 39.9229 14.5346 39.4761 14.9066 39.1147C15.2785 38.7533 15.7367 38.5726 16.2811 38.5726H47.17C47.717 38.5726 48.1758 38.7533 48.5465 39.1147C48.9172 39.4761 49.1019 39.9229 49.1006 40.4549C49.0993 40.987 48.914 41.4343 48.5446 41.797C48.1752 42.1597 47.717 42.3397 47.17 42.3372H16.2811ZM16.2811 32.9258C15.7342 32.9258 15.276 32.7451 14.9066 32.3837C14.5372 32.0223 14.3519 31.5755 14.3506 31.0435C14.3493 30.5114 14.5346 30.0647 14.9066 29.7033C15.2785 29.3419 15.7367 29.1612 16.2811 29.1612H47.17C47.717 29.1612 48.1758 29.3419 48.5465 29.7033C48.9172 30.0647 49.1019 30.5114 49.1006 31.0435C49.0993 31.5755 48.914 32.0229 48.5446 32.3856C48.1752 32.7482 47.717 32.9283 47.17 32.9258H16.2811ZM16.2811 23.5143C15.7342 23.5143 15.276 23.3336 14.9066 22.9722C14.5372 22.6108 14.3519 22.1641 14.3506 21.632C14.3493 21.1 14.5346 20.6532 14.9066 20.2918C15.2785 19.9304 15.7367 19.7497 16.2811 19.7497H47.17C47.717 19.7497 48.1758 19.9304 48.5465 20.2918C48.9172 20.6532 49.1019 21.1 49.1006 21.632C49.0993 22.1641 48.914 22.6114 48.5446 22.9741C48.1752 23.3368 47.717 23.5168 47.17 23.5143H16.2811Z" fill="white" style="fill:white;fill-opacity:1;"/>
             </svg>
@@ -80,30 +80,29 @@
               </li>
 
             </ul>
-            <!-- Selector de idioma personalizado -->
-            <div class="language-dropdown" id="languageDropdown">
-              <button class="language-selected" id="selectedLanguageBtn" type="button">
+          </div>
+          <div class="language-dropdown" id="languageDropdown">
+            <button class="language-selected" id="selectedLanguageBtn" type="button">
+              <span class="lang-flag"><img src="./img/es.svg" alt="Español" width="24"></span>
+              <span class="lang-label">ESP</span>
+              <span class="lang-arrow">&#9662;</span>
+            </button>
+            <ul class="language-options" id="languageOptions">
+              <li data-lang="es">
                 <span class="lang-flag"><img src="./img/es.svg" alt="Español" width="24"></span>
                 <span class="lang-label">ESP</span>
-                <span class="lang-arrow">&#9662;</span>
-              </button>
-              <ul class="language-options" id="languageOptions">
-                <li data-lang="es">
-                  <span class="lang-flag"><img src="./img/es.svg" alt="Español" width="24"></span>
-                  <span class="lang-label">ESP</span>
-                </li>
-                <li data-lang="en">
-                  <span class="lang-flag"><img src="./img/en.svg" alt="English" width="24"></span>
-                  <span class="lang-label">ENG</span>
-                </li>
-                <li data-lang="pt">
-                  <span class="lang-flag"><img src="./img/pt.svg" alt="Português" width="24"></span>
-                  <span class="lang-label">PT</span>
-                </li>
-              </ul>
-            </div>
-            <a class="nav-item container__menu--item container__menu--btn" href="#contacto" data-i18n="menu.contact"></a>
+              </li>
+              <li data-lang="en">
+                <span class="lang-flag"><img src="./img/en.svg" alt="English" width="24"></span>
+                <span class="lang-label">ENG</span>
+              </li>
+              <li data-lang="pt">
+                <span class="lang-flag"><img src="./img/pt.svg" alt="Português" width="24"></span>
+                <span class="lang-label">PT</span>
+              </li>
+            </ul>
           </div>
+          <a class="nav-item container__menu--item container__menu--btn" href="#contacto" data-i18n="menu.contact"></a>
         </div>
       </nav>
     </head>
@@ -125,11 +124,14 @@
     <!--SECCIONES INICIO-->
     <!-- SOBRE MI INICIO -->
     <section id="sobreMi">
-      <div class="container_sobreMi">
-        <div class="container__sobreMi--img">
+      <div class="container_sobreMi" >
+        <div class="container__sobreMi--img" data-aos="fade-up"
+     data-aos-duration="3000">
           <img src="./img/SobreMi.webp" alt="Familia David Firman" class="img-fluid">
         </div>
-        <div class="container__sobreMi--text">
+        <div class="container__sobreMi--text"  data-aos="fade-down"
+     data-aos-easing="linear"
+     data-aos-duration="1500">
           <h2 class="container__sobreMi--text-h2" data-i18n="about.title"></h2>
           <p data-i18n="about.description"></p>
         </div>
@@ -149,9 +151,13 @@
     <!-- CURSOS INICIO -->
     <section id="cursos">
       <div class="container-cursos">
-        <h2 data-i18n="courses.title"></h2>
-        <p data-i18n="courses.intro"></p>
-        <div class="swiper cursosSwiper">
+        <h2 data-i18n="courses.title" data-aos="fade-up"
+     data-aos-duration="3000"></h2>
+        <p data-i18n="courses.intro" data-aos="fade-up"
+     data-aos-duration="3000"></p>
+        <div class="swiper cursosSwiper" data-aos="fade-down"
+     data-aos-easing="linear"
+     data-aos-duration="1500">
           <div class="swiper-wrapper" id="courses-list"></div>
           <div class="swiper-pagination"></div>
         </div>
@@ -163,13 +169,13 @@
     <!-- INVITACIONES INICIO -->
     <section id="invitaciones">
       <div class="container__invitaciones">
-        <h2 data-i18n="church.title"></h2>
+        <h2 data-i18n="church.title" data-aos="fade-up"></h2>
         <div class="container__invitaciones--contenido">
-          <div class="container__invitaciones--text">
+          <div class="container__invitaciones--text"data-aos="fade-up-right">
             <p data-i18n="church.text"></p>
             <a href="#" class="btn btn-invitaciones" data-i18n="church.button"></a>
           </div>
-          <div class="container__invitaciones--img">
+          <div class="container__invitaciones--img" data-aos="fade-left">
             <img src="./img/mundoCruzz.webp" alt="Sobreedificador de la Iglesia" class="img-fluid">
           </div>
         </div>
@@ -180,13 +186,15 @@
     <!-- LIBROS INICIO -->
     <section id="libros">
       <div class="container__libros">
-        <h2 data-i18n="books.title"></h2>
-        <p data-i18n="books.intro"></p>
+        <h2 data-i18n="books.title" data-aos="fade-up"
+     data-aos-duration="3000"></h2>
+        <p data-i18n="books.intro" data-aos="fade-up"
+     data-aos-duration="3000"></p>
         <!-- Libros compra -->
-        <div id="books-list" class="container__libros--compra--cards"></div>
+        <div id="books-list" class="container__libros--compra--cards" data-aos="flip-left"></div>
         <!-- Libros gratuitos (carrusel) -->
-         <h3 data-i18n="books.msgBooks"></h3>
-        <div class="swiper librosDescargaSwiper">
+         <h3 data-i18n="books.msgBooks" data-aos="flip-up"></h3>
+        <div class="swiper librosDescargaSwiper" data-aos="flip-left">
           <div class="swiper-wrapper" id="books-free-list"></div>
           <div class="swiper-pagination librosDescarga-pagination"></div>
         </div>
@@ -198,7 +206,8 @@
     <section id="videos">
       <div class="container__videos">
         <div class="container__videos--contenido">
-           <div class="container__videos--text">
+           <div class="container__videos--text" data-aos="fade-up"
+     data-aos-duration="3000">
               <svg xmlns="http://www.w3.org/2000/svg" width="95" height="64" viewBox="0 0 95 64" fill="none">
                 <path d="M14.8462 0C10.9088 0 7.13257 1.58035 4.34836 4.3934C1.56415 7.20644 0 11.0218 0 15V49C0 52.9782 1.56415 56.7936 4.34836 59.6066C7.13257 62.4197 10.9088 64 14.8462 64H52.4567C56.3941 64 60.1703 62.4197 62.9545 59.6066C65.7387 56.7936 67.3029 52.9782 67.3029 49V46.988L84.1365 58.732C88.729 61.936 95 58.612 95 52.972V11.012C95 5.372 88.729 2.044 84.1365 5.252L67.3029 16.996V15C67.3029 11.0218 65.7387 7.20644 62.9545 4.3934C60.1703 1.58035 56.3941 0 52.4567 0H14.8462ZM67.3029 24.284L87.5096 10.188C87.6582 10.0844 87.832 10.0238 88.0123 10.0128C88.1926 10.0019 88.3723 10.0409 88.5322 10.1258C88.692 10.2107 88.8259 10.3381 88.9192 10.4943C89.0125 10.6505 89.0617 10.8296 89.0615 11.012V52.972C89.0617 53.1544 89.0125 53.3335 88.9192 53.4897C88.8259 53.6459 88.692 53.7733 88.5322 53.8582C88.3723 53.9431 88.1926 53.9821 88.0123 53.9712C87.832 53.9602 87.6582 53.8996 87.5096 53.796L67.3029 39.692V24.284ZM5.93849 15C5.93849 12.6131 6.87698 10.3239 8.54751 8.63604C10.218 6.94821 12.4837 6 14.8462 6H52.4567C54.8191 6 57.0849 6.94821 58.7554 8.63604C60.4259 10.3239 61.3644 12.6131 61.3644 15V49C61.3644 51.3869 60.4259 53.6761 58.7554 55.364C57.0849 57.0518 54.8191 58 52.4567 58H14.8462C12.4837 58 10.218 57.0518 8.54751 55.364C6.87698 53.6761 5.93849 51.3869 5.93849 49V15Z" fill="url(#paint0_linear_426_180)"/>
                 <defs>
@@ -212,9 +221,10 @@
               <p data-i18n="videos.intro"></p>
               <a href="https://www.youtube.com/@DavidFirmanOficial" class="btn btn-videos" target="_blank" data-i18n="videos.button"></a>
             </div>
-            <div class="container__videos--principal" id="video-principal"></div>
+            <div class="container__videos--principal" id="video-principal" data-aos="fade-down"
+     data-aos-duration="3000"></div>
         </div>
-        <div class="swiper videosSwiper">
+        <div class="swiper videosSwiper" data-aos="zoom-in-down">
           <div class="swiper-wrapper" id="videos-list"></div>
           <div class="swiper-pagination videos-pagination"></div>
         </div>
@@ -367,7 +377,7 @@
             <div class="row mb-3 row_form">
               <div class="col">
                 <label for="pais" class="form-label" data-i18n="contact.form.pais"></label>
-                <input type="text" class="form-control" id="pais" name="pais" required placeholder="">
+                <input type="text" class="form-control" id="paisModal" name="pais" required placeholder="">
               </div>
               <div class="col">
                 <label for="ciudad" class="form-label" data-i18n="contact.form.ciudad"></label>
@@ -407,8 +417,10 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
-  
-
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   
 </body>
 
