Final. a espera de correcciones 23-06-2025

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <p data-i18n="church.text"></p>
             <a href="#" class="btn btn-invitaciones" data-i18n="church.button"></a>
           </div>
-          <div class="container__invitaciones--img" data-aos="fade-left">
+          <div class="container__invitaciones--img" data-aos="fade-up-right">
             <img src="./img/mundoCruzz.webp" alt="Sobreedificador de la Iglesia" class="img-fluid">
           </div>
         </div>
