--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
   <title>David Firman Oficial - Psicólogo, Pastor y Escritor </title>
 
-<meta name="description" content="David Firman es psicólogo clínico, pastor y escritor. Descubre sus libros, cursos, servicios y reflexiones espirituales. Conéctate con un mensaje transformador.">
-<meta name="keywords" content="David Firman, psicólogo, pastor, escritor, libros cristianos, cursos, conferencias, psicología clínica, reflexiones, fe, espiritualidad, salud mental">
+<meta name="description" content="David Firman es psicólogo del nuevo pacto , pastor y escritor. Descubre sus libros, cursos, servicios y reflexiones espirituales. Conéctate con un mensaje transformador.">
+<meta name="keywords" content="David Firman, psicólogo, psicólogo del nuevo pacto, pastor, escritor, libros cristianos, cursos, conferencias, psicología clínica, reflexiones, fe, espiritualidad, salud mental">
 <meta name="robots" content="index, follow">
 <meta name="author" content="Soltecs Software & Design">
 <link rel="canonical" href="https://gelbass.github.io/DavidFirmanOficial/">
