--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 <meta property="og:title" content="David Firman - Psicólogo, Pastor y Escritor Oficial">
 <meta property="og:description" content="Explora libros, cursos y servicios de David Firman: psicólogo clínico, pastor y comunicador con un mensaje de transformación espiritual.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://davidfirmanoficial.com/DavidFirmanOficial/">
-<meta property="og:image" content="https://davidfirmanoficial.com/DavidFirmanOficial/img/DavidFirman.webp">
+<meta property="og:url" content="https://davidfirmanoficial.com/">
+<meta property="og:image" content="https://davidfirmanoficial.com//img/DavidFirman.webp">
 
 <!-- Twitter Cards -->
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="David Firman - Psicólogo, Pastor y Escritor Oficial">
 <meta name="twitter:description" content="Descubre los libros, cursos y mensajes de David Firman. Psicología, fe y transformación personal.">
-<meta name="twitter:image" content="https://davidfirmanoficial.com/DavidFirmanOficial/img/DavidFirman.webp">
+<meta name="twitter:image" content="https://davidfirmanoficial.com/img/DavidFirman.webp">
   
   <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" href="img/favicon-96x96.png" sizes="96x96" />
