Se agregan 2 videos mas

--- a/index.html
+++ b/index.html
@@ -12,32 +12,32 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-  <title>David Firman Oficial - Psicólogo, Pastor y Escritor </title>
+  <title>David Firman - Psicólogo, Pastor y Escritor </title>
 
-<meta name="description" content="David Firman es psicólogo del nuevo pacto , pastor y escritor. Descubre sus libros, cursos, servicios y reflexiones espirituales. Conéctate con un mensaje transformador.">
-<meta name="keywords" content="David Firman, psicólogo, psicólogo del nuevo pacto, pastor, escritor, libros cristianos, cursos, conferencias, psicología clínica, reflexiones, fe, espiritualidad, salud mental">
-<meta name="robots" content="index, follow">
-<meta name="author" content="Soltecs Software & Design">
-<link rel="canonical" href="https://davidfirmanoficial.com/">
+  <meta name="description" content="David Firman es psicólogo del nuevo pacto , pastor y escritor. Descubre sus libros, cursos, servicios y reflexiones espirituales. Conéctate con un mensaje transformador.">
+  <meta name="keywords" content="David Firman, psicólogo, psicólogo del nuevo pacto, pastor, escritor, libros cristianos, cursos, conferencias, psicología clínica, reflexiones, fe, espiritualidad, salud mental">
+  <meta name="robots" content="index, follow">
+  <meta name="author" content="Soltecs Software & Design">
+  <link rel="canonical" href="https://davidfirmanoficial.com/">
 
-<!-- Open Graph para Facebook y redes -->
-<meta property="og:title" content="David Firman - Psicólogo, Pastor y Escritor Oficial">
-<meta property="og:description" content="Explora libros, cursos y servicios de David Firman: psicólogo clínico, pastor y comunicador con un mensaje de transformación espiritual.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://davidfirmanoficial.com/">
-<meta property="og:image" content="https://davidfirmanoficial.com//img/DavidFirman.webp">
+  <!-- Open Graph para Facebook y redes -->
+  <meta property="og:title" content="David Firman - Psicólogo, Pastor y Escritor Oficial">
+  <meta property="og:description" content="Explora libros, cursos y servicios de David Firman: psicólogo clínico, pastor y comunicador con un mensaje de transformación espiritual.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://davidfirmanoficial.com/">
+  <meta property="og:image" content="https://davidfirmanoficial.com/img/DavidFirman.webp">
 
-<!-- Twitter Cards -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="David Firman - Psicólogo, Pastor y Escritor Oficial">
-<meta name="twitter:description" content="Descubre los libros, cursos y mensajes de David Firman. Psicología, fe y transformación personal.">
-<meta name="twitter:image" content="https://davidfirmanoficial.com/img/DavidFirman.webp">
+  <!-- Twitter Cards -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="David Firman - Psicólogo, Pastor y Escritor Oficial">
+  <meta name="twitter:description" content="Descubre los libros, cursos y mensajes de David Firman. Psicología, fe y transformación personal.">
+  <meta name="twitter:image" content="https://davidfirmanoficial.com/img/DavidFirman.webp">
   
   <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-  <link rel="icon" type="image/png" href="img/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
-  <link rel="shortcut icon" href="/img/favicon.ico" />
-  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" href="img/favicon-96x96.png" sizes="96x96"/>
+  <link rel="icon" type="image/svg+xml" href="img/favicon.svg"/>
+  <link rel="shortcut icon" href="/img/favicon.ico"/>
+  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png"/>
 
 </head>
 
