--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Open Graph para Facebook y redes -->
   <meta property="og:title" content="David Firman | Psicólogo, Pastor y Escritor Oficial">
-  <meta property="og:description" content="Explora libros, cursos y servicios de David Firman: psicólogo clínico, pastor y comunicador con un mensaje de transformación espiritual.">
+  <meta property="og:description" content="Explora libros, cursos y servicios de David Firman: psicólogo del nuevo pacto, pastor y comunicador con un mensaje de transformación espiritual.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://davidfirmanoficial.com/">
   <meta property="og:image" content="https://davidfirmanoficial.com/img/DavidFirman.webp">
