--- a/index.html
+++ b/index.html
@@ -33,11 +33,17 @@
   <meta name="twitter:description" content="Descubre los libros, cursos y mensajes de David Firman. Psicología, fe y transformación personal.">
   <meta name="twitter:image" content="https://davidfirmanoficial.com/img/DavidFirman.webp">
   
-  <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
-  <link rel="icon" type="image/png" href="img/favicon-96x96.png" sizes="96x96"/>
-  <link rel="icon" type="image/svg+xml" href="img/favicon.svg"/>
-  <link rel="shortcut icon" href="/img/favicon.ico"/>
-  <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png"/>
+  <!-- Favicon estándar para navegadores y Google -->
+  <link rel="icon" href="https://davidfirmanoficial.com/favicon.ico" type="image/x-icon">
+
+  <!-- Favicon PNG para navegadores modernos -->
+  <link rel="icon" href="https://davidfirmanoficial.com/img/favicon-96x96.png" type="image/png" sizes="96x96">
+
+  <!-- SVG opcional si querés usar vector -->
+  <link rel="icon" href="https://davidfirmanoficial.com/img/favicon.svg" type="image/svg+xml">
+
+  <!-- Apple Touch Icon para iOS -->
+  <link rel="apple-touch-icon" href="https://davidfirmanoficial.com/img/apple-touch-icon.png" sizes="180x180">
 
 </head>
 
@@ -47,7 +53,7 @@
     <head id="header">
       <nav class="navbar navbar-expand-lg fixed-top container__menu" id="menu">
         <div class="container_logo">
-          <a href="#home"><img class="imgMenu" src="./img/DavidFirmaLogo.svg" alt="David Firman Oficial"></a>        
+          <a href="#home"><img class="imgMenu" src="https://davidfirmanoficial.com/img/DavidFirmaLogo.svg" alt="David Firman Oficial"></a>        
         </div>
         <div class="container-fluid container__menu--icon">
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
