Se comenta la secion de libros gratuitos

--- a/index.html
+++ b/index.html
@@ -200,15 +200,17 @@
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000"></div>
         <!-- Libros gratuitos (carrusel) -->
+         <!-- 
          <h3 data-i18n="books.msgBooks" data-aos="fade-up"
-     data-aos-anchor-placement="top-bottom"></h3>
+          data-aos-anchor-placement="top-bottom"></h3>
         <div class="swiper librosDescargaSwiper" data-aos="flip-left"
      data-aos-easing="ease-out-cubic"
      data-aos-duration="2000">
           <div class="swiper-wrapper" id="books-free-list"></div>
           <div class="swiper-pagination librosDescarga-pagination"></div>
         </div>
-      </div>
+      </div>-->
+
     </section>
     <!-- LIBROS FIN -->
 
